added book changes
